Make title consistent with others

--- a/_posts/2013-11-17-how-anonymity-affected-gender-balance.html
+++ b/_posts/2013-11-17-how-anonymity-affected-gender-balance.html
@@ -1,6 +1,6 @@
 ---
 anchor_id: anonymity
-title: How anonymous submissions affected gender balance at our conference
+title: How Anonymous Submissions Affected Gender Balance at our Conference
 layout: blog_post
 ---
 
