--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@ in 2009 at XPDay, one of the main pro-Agile conferences, and it was very popular
                 <!-- Column 2 start -->
 <h2>CV</h2>
 
-<p>My <a href="AnnaShipmanCVAug13.pdf">CV</a> (as a PDF).</p>
+<p>My <a href="AnnaShipmanCVMarch14.pdf">CV</a> (as a PDF).</p>
 
 <p>Me on <a href="https://github.com/annashipman/" target="_blank">GitHub</a>.
 
