--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 <!-- Column 1 start -->
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
+<h1><a href="/jfdi/running-oss-projects.html">Running OSS projects</a></h1>
+<date>03 April 2014</date>
+<p>At ScaleSummit last week, I proposed a session on running Open Source projects. I am hoping to move the project I’m working on, vCloud Tools, from being coded in the open to being Open Source and wanted to get the benefit of the accumulated wisdom. It was an excellent session and I really got a lot out of it. The executive summary is that if you are trying to build a community, you need to optimise for bringing people into the community, and a lot of the discussion focused around that. Here are some of the main things that I took away from it.</p>
+<p><a href="/jfdi/running-oss-projects.html">Read more...</a></p>
+</div>
+<div class="blog-post">
   <h1><a href="/jfdi/conference-speaking.html">
 Are you thinking of speaking at a conference?</a></h1>
 <date>09 March 2014</date>
