Add link where GitHub have 404ed content

--- a/_posts/2013-09-09-creating-a-puppet-module.html
+++ b/_posts/2013-09-09-creating-a-puppet-module.html
@@ -31,7 +31,7 @@ git remote rm origin
 <p><span id="git-filter-branch">Now</span> we want to get rid of everything that's not our module and make our module
 the root, and this is where we use <a
 href="http://teach.github.com/articles/lesson-filter-branch/" target="_blank">git
-filter-branch</a>:</p>
+filter-branch</a> (update 2014-04-12: GitHub have removed this without a redirect – tsk! – but you can find a historical copy <a href="https://github.com/github/training.github.com/blob/4cdc8c9c72ba3b0a82612bd0f709d679f3020b01/technology/_posts/2001-01-01-lesson-filter-branch.md" target="_blank">here</a>):</p>
 <div class="code-sample">
 git filter-branch --subdirectory-filter modules/audit-d HEAD
 </div>
