GitHub not Github

--- a/_posts/2013-09-09-creating-a-puppet-module.html
+++ b/_posts/2013-09-09-creating-a-puppet-module.html
@@ -18,7 +18,7 @@ mirror</a> use it.</p>
 <p>The first step in creating a new module is to pull it out into its own git
 repository.<p>
 <p>First, clone the repository the module is currently in. (Extra learning here:
-you don't need to clone it from Github, you can just git clone the existing
+you don't need to clone it from GitHub, you can just git clone the existing
 repository.) You want <span class="code-sample-inline">--no-hardlinks</span> so it's entirely separate:</p>
 <div class="code-sample">
 git clone --no-hardlinks puppet puppet-auditd
