Add Scotch on the Rocks talk
Also, standardise on leading 0 for single-digit dates.

--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,9 @@
 
 <div>
 <h2>Speaking</h2>
+<h1><a href="http://sotr.eu/speakers.html#annashipman" target="_blank">Automating Government</a></h1>
+<date>06 June 2014</date>
+<p>I gave a talk at the delightful <a href="http://sotr.eu/" target="_blank">Scotch on the Rocks</a> in Edinburgh on my work on <a href="https://github.com/gds-operations/vcloud-tools" target="_blank">vCloud Tools</a> – what we built, how we built it, some hard problems we faced and some tips on how to automate your own infrastructure. <a href="http://www.slideshare.net/annashipman/automating-government" target="_blank">Slides are here</a> and if you watch this space, there may be a video soon.</p>
 <h1><a href="http://www.youtube.com/watch?v=Q1qWzz6liK0" target="_blank">Craftsman Softwareship</a></h1>
 <date>12 November 2013</date>
 <p>I gave an Ignite talk based on my <a href="/jfdi/roof-bug-fixing.html">roof bug-fixing</a> blog post.</p><p><a href="http://www.youtube.com/watch?v=Q1qWzz6liK0" target="_blank">Watch it</a>.</p>
@@ -38,14 +41,14 @@
 <p><a href="http://www.slideshare.net/annashipman/x-pday-23022981"
 target="_blank">Slides</a> from Edinburgh.</p>
 <h1><a href="http://www.spaconference.org/spa2012/sessions/session412.html" target="_blank">Data Visualisations in JavaScript</a></h1>
-<date>3 July 2012, 12 Nov 2012</date>
+<date>03 July 2012, 12 Nov 2012</date>
 <p>A workshop showing how to create three different kinds of visualisations in
 three different JavaScript visualisation libraries. I delivered this at <a href="http://www.spaconference.org/" target="_blank">SPA</a> 2012. It received very high feedback scores and I was invited to deliver it again at <a href="http://bcs-spa.org/minispa-2012.html" target="_blank">miniSPA</a> (the six top sessions from SPA) 2012</a>.<p>
 
 <p><a href="http://www.slideshare.net/annashipman/data-visualisations-in-iavascript" target="_blank">Slides</a>, <a href="https://github.com/annashipman/data-visualisations-in-javascript" target="_blank">Code</a>.</p>
 
 <h1><a href="http://xpday-london.editme.com/WhenAgileMightNotBeTheBestSolution" target="_blank">When Agile Might Not Be The Best Solution</a></h1>
-<date>7 December 2009</date>
+<date>07 December 2009</date>
 <p>A talk outlining some contraindications for Agile adoption. I delivered this
 in 2009 at XPDay, one of the main pro-Agile conferences, and it was very popular!</p>
 
