Add post on Ignite talk

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 <!-- Column 1 start -->
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
+<h1><a href="/jfdi/preparing-ignite-talk.html" target="_blank">
+Some thoughts on preparing an Ignite talk</a></h1>
+<date>07 July 2014</date>
+<p>I  did my first <a href="http://igniteshow.com/">Ignite</a> talk in November last year, based on <a href="/jfdi/roof-bug-fixing.html">roof bug-fixing</a>, and these are some of the things I found useful while preparing.</p>
+<p><a href="/jfdi/preparing-ignite-talk.html">Read more...</a></p>
+</div>
+<div class="blog-post">
 <h1><a href="http://sotr.eu/speakers.html#annashipman" target="_blank">Automating Government</a></h1>
 <date>06 June 2014</date>
 <p>I gave a talk at the delightful <a href="http://sotr.eu/" target="_blank">Scotch on the Rocks</a> in Edinburgh on my work on <a href="https://github.com/gds-operations/vcloud-tools" target="_blank">vCloud Tools</a> – what we built, how we built it, some hard problems we faced and some tips on how to automate your own infrastructure. <a href="http://www.slideshare.net/annashipman/automating-government" target="_blank">Slides are here</a> and if you watch this space, there may be a video soon.</p>
