Update job title and description

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ done myself.</p>
             <div class="col2">
                 <!-- Column 2 start -->
                 <div class="sidebar">
-<p>I am a software developer living and working in London. Most of my professional experience is in Java, but I am currently working in Ruby, and I've done a fair bit of JavaScript.</a>
+<p>I am a technical architect and software developer living and working in London, currently at the <a href="">Government Digital Service</a>.</p>
 <p>I <a href="http://twitter.com/annashipman" target="_blank">tweet</a>, <a href="https://github.com/annashipman" target="_blank">code</a>, occasionally <a href="jfdi.html">blog</a> and <a href="http://selpool.co.uk/" target="_blank">play pool</a>.
 
 
