--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 <!-- Column 1 start -->
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
+<h1><a href="/jfdi/how-to-get-women-speakers.html">
+How do I get more women to speak at my conference?</a></h1>
+<date>08 December 2014</date>
+<p>Last year I wrote about <a href="/jfdi/how-anonymity-affected-gender-balance.html">how anonymous submissions affected gender balance</a> at <a href="http://www.spaconference.org/">SPA conference</a>. Short answer: not hugely, but it did have some other positive effects. This year, however, we did have more women speaking at the conference than previously. Here are some suggestions for how to replicate this at your conference.</p>
+<p><a href="/jfdi/how-to-get-women-speakers.html">Read more...</a></p>
+</div>
+<div class="blog-post">
 <h1><a href="http://blog.buildqualityin.com/" target="_blank">
 Build Quality In</a></h1>
 <date>03 September 2014</date>
