--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
 <h2>Speaking</h2>
 <h1><a href="http://sotr.eu/speakers.html#annashipman" target="_blank">Automating Government</a></h1>
 <date>06 June 2014</date>
-<p>I gave a talk at the delightful <a href="http://sotr.eu/" target="_blank">Scotch on the Rocks</a> in Edinburgh on my work on <a href="https://github.com/gds-operations/vcloud-tools" target="_blank">vCloud Tools</a> – what we built, how we built it, some hard problems we faced and some tips on how to automate your own infrastructure. <a href="http://www.slideshare.net/annashipman/automating-government" target="_blank">Slides are here</a> and if you watch this space, there may be a video soon.</p>
+<p>I gave a talk at the delightful <a href="http://sotr.eu/" target="_blank">Scotch on the Rocks</a> in Edinburgh on my work on <a href="https://github.com/gds-operations/vcloud-tools" target="_blank">vCloud Tools</a> – what we built, how we built it, some hard problems we faced and some tips on how to automate your own infrastructure. <a href="http://www.slideshare.net/annashipman/automating-government" target="_blank">Slides are here</a>.
 <h1><a href="http://www.youtube.com/watch?v=Q1qWzz6liK0" target="_blank">Craftsman Softwareship</a></h1>
 <date>12 November 2013</date>
 <p>I gave an Ignite talk based on my <a href="/jfdi/roof-bug-fixing.html">roof bug-fixing</a> blog post.</p><p><a href="http://www.youtube.com/watch?v=Q1qWzz6liK0" target="_blank">Watch it</a>.</p>
