Add video of Velocity NY talk

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@ How do I get more women to speak at my conference?</a></h1>
 <p><a href="/jfdi/how-to-get-women-speakers.html">Read more...</a></p>
 </div>
 <div class="blog-post">
+<h1><a href="https://www.youtube.com/watch?v=KRMYr_Bw04g">Infrastructure as Code in Government</a></h1>
+<date>16 September 2014</date>
+<p>A talk about how we do infrastructure as code on <a href="https://www.gov.uk">GOV.UK</a> and my work on <a href="http://gds-operations.github.io/vcloud-tools"/>vCloud Tools</a>, our open-source tools for automating provisioning. <a href="https://www.youtube.com/watch?v=KRMYr_Bw04g">Video is here</a>, abstract is <a href="http://velocityconf.com/velocityny2014/public/schedule/detail/35839">on the Velocity site</a> and the slides are <a href="http://www.slideshare.net/annashipman/infra-as-code">on Slideshare</a>.
+</div>
+<div class="blog-post">
 <h1><a href="http://blog.buildqualityin.com/" target="_blank">
 Build Quality In</a></h1>
 <date>03 September 2014</date>
