--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,9 @@
 
 <div>
 <h2>Speaking</h2>
+<h1><a href="https://www.youtube.com/watch?v=KRMYr_Bw04g">Infrastructure as Code in Government</a></h1>
+<date>16 September 2014</date>
+<p>A talk about how we do infrastructure as code on <a href="https://www.gov.uk">GOV.UK</a> and my work on <a href="http://gds-operations.github.io/vcloud-tools"/>vCloud Tools</a>, our open-source tools for automating provisioning. <a href="https://www.youtube.com/watch?v=KRMYr_Bw04g">Video is here</a>, abstract is <a href="http://velocityconf.com/velocityny2014/public/schedule/detail/35839">on the Velocity site</a> and the slides are <a href="http://www.slideshare.net/annashipman/infra-as-code">on Slideshare</a>.
 <h1><a href="http://sotr.eu/speakers.html#annashipman" target="_blank">Automating Government</a></h1>
 <date>06 June 2014</date>
 <p>I gave a talk at the delightful <a href="http://sotr.eu/" target="_blank">Scotch on the Rocks</a> in Edinburgh on my work on <a href="https://github.com/gds-operations/vcloud-tools" target="_blank">vCloud Tools</a> – what we built, how we built it, some hard problems we faced and some tips on how to automate your own infrastructure. <a href="http://www.slideshare.net/annashipman/automating-government" target="_blank">Slides are here</a>.
