--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 <!-- Column 1 start -->
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
+<h1><a href="/jfdi/staying-technical.html">Staying technical</a></h1>
+<date>29 March 2015</date>
+<p>A few weeks ago I wrote a post about <a href="/jfdi/what-is-a-technical-architect.html">being a technical architect</a>, and one of my main conclusions was that you need to stay technical. But how?</p>
+<p><a href="/jfdi/staying-technical.html">Some suggestions here...</a></p>
+</div>
+<div class="blog-post">
 <h1><a href="/jfdi/what-is-a-technical-architect.html">What is a technical architect?</a></h1>
 <date>01 March 2015</date>
 <p>I have wanted to be a technical architect since I started out in IT, and last September I was delighted to achieve this long-held goal. But very quickly I realised that, while it was clear to me that the role of a technical architect is overseeing the technical aspects of large software projects, I really wasn't sure what that meant I should be focusing on day-to-day. So I turned to some of the brilliant technical architects I know, both colleagues and elsewhere in the industry, for their advice.</p>
