Add blog post on good pull requests

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 <!-- Column 1 start -->
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
+<h1><a href="/jfdi/good-pull-requests.html">How to raise a good pull request</a></h1>
+<date>21 April 2015</date>
+<p>On our team we always commit code using pull requests, for review by someone who hasn't worked on that code. Here are my guidelines on how to raise a good pull request.</p>
+<p><a href="/jfdi/good-pull-requests.html">Read more...</a></p>
+</div>
+<div class="blog-post">
 <h1><a href="/jfdi/staying-technical.html">Staying technical</a></h1>
 <date>29 March 2015</date>
 <p>A few weeks ago I wrote a post about <a href="/jfdi/what-is-a-technical-architect.html">being a technical architect</a>, and one of my main conclusions was that you need to stay technical. But how?</p>
