Add CV tips post

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
                 <!-- Column 1 start -->
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
+<h1><a href="/jfdi/cv-tips.html">Tips on writing a technical CV</a></h1>
+<date>19 July 2015</date>
+<p>In the last few years I've been more involved in recruitment and seeing a lot
+of CVs for developer roles has given me some thoughts on what makes a good
+technical CV. Here are some tips to improve yours.</p>
+<p><a href="/jfdi/cv-tips.html">Read more...</a></p>
+</div>
+<div class="blog-post">
 <h1><a href="/jfdi/good-pull-requests.html">How to raise a good pull request</a></h1>
 <date>21 April 2015</date>
 <p>On our team we always commit code using pull requests, for review by someone who hasn't worked on that code. Here are my guidelines on how to raise a good pull request.</p>
