Upgrade links to Dols
He has deleted his website and changed his Twitter handle.

--- a/_posts/2011-07-27-upgrading-firefox-part-2.html
+++ b/_posts/2011-07-27-upgrading-firefox-part-2.html
@@ -3,7 +3,8 @@ anchor_id: firefox-part-2
 title: A Voyage of Discovery – Upgrading Firefox Part 2
 layout: blog_post
 ---
-<p>Right, it turned out my next step was not a chat with Joe Halliwell but instead with my good friend and mentor, <a href="http://dolsonagile.wordpress.com/">Dolan O'Toole</a>, and what I thought might be a voyage of discovery into how to make my installation of firefox run like a normal program turned out to be just a short trip of discovery to finding out that I hadn't actually been looking in the right places.</p>
+<p>Right, it turned out my next step was not a chat with Joe Halliwell but
+instead with my good friend and mentor, <a href="https://twitter.com/boffhaku">Dolan O'Toole</a>, and what I thought might be a voyage of discovery into how to make my installation of firefox run like a normal program turned out to be just a short trip of discovery to finding out that I hadn't actually been looking in the right places.</p>
 
 <p>After helpfully pointing out that I "sound like a linux newbie :)" (yes, yes I am), Dolan explained where I'd gone wrong: "You followed the instuctions as they are. The only thing you weren't aware of is that most of the time, someone would have done a build of a program for ubuntu and put it in an apt repository, usually on launchpad. I usually search for something like "firefox 5 ubuntu 10.10" if I need to install something before I resort to manual installations."</p>
 
