--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <div class="blog-post">
 <h1><a
 href="/jfdi/slides-from-ops-a-devs-guide.html">
-Slides and links from Operations: A developer's guide</a></h1>
+Slides and links from Operations: a developer's guide</a></h1>
 <date>07 November 2015</date>
-<p>Slides from my talk Operations: A developer's guide, at FFConf 2015.</p>
+<p>Slides from my talk <i>Operations: a developer's guide</i>, at FFConf 2015.</p>
 <p><a href="/jfdi/slides-from-ops-a-devs-guide.html">Slides</a></p>
 </div>
 <div class="blog-post">
