SE London pool league site is gone
And I don't play in that league any more, so no point replacing it with the
facebook page.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ How we moved vCloud Tools from Coding in the Open to Open Source</a></h1>
                 <!-- Column 2 start -->
                 <div class="sidebar">
 <p>I am a technical architect and software developer living and working in London, currently at the <a href="https://gds.blog.gov.uk/about/">Government Digital Service</a>.</p>
-<p>I <a href="http://twitter.com/annashipman" target="_blank">tweet</a>, <a href="https://github.com/annashipman" target="_blank">code</a>, occasionally <a href="jfdi.html">blog</a> and <a href="http://selpool.co.uk/" target="_blank">play pool</a>.
+<p>I <a href="http://twitter.com/annashipman" target="_blank">tweet</a>, <a href="https://github.com/annashipman" target="_blank">code</a>, occasionally <a href="jfdi.html">blog</a> and play pool.
 
 
 </div>
