Add video for Operations: A developer's guide

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
 <h1><a
-href="/jfdi/slides-from-ops-a-devs-guide.html">
-Slides and links from Operations: a developer's guide</a></h1>
-<date>07 November 2015</date>
-<p>Slides from my talk <i>Operations: a developer's guide</i>, at FFConf 2015.</p>
-<p><a href="/jfdi/slides-from-ops-a-devs-guide.html">Slides</a></p>
+href="/jfdi/ops-a-devs-guide-video.html">
+Operations: a developer's guide</a></h1>
+<date>27 November 2015</date>
+<p>I gave a talk <i>Operations: a developer's guide</i>, at FFConf 2015.</p>
+<p><a href="/jfdi/ops-a-devs-guide-video.html">Watch it</a></p>
 </div>
 <div class="blog-post">
 <h1><a
