Add most recent talks to CV page

--- a/cv.html
+++ b/cv.html
@@ -30,6 +30,26 @@
 <div>
 <h2>Speaking</h2>
 <h1><a
+href="https://www.youtube.com/watch?v=y6hbrS3DheU">Operations: a developer's
+guide</a></h1>
+<date>06 November 2015</date>
+<p>An introduction to the web ops skills that will help you be a better
+developer. Delivered at <a
+href="http://2015.ffconf.org/">FFConf</a>.</p>
+<p>Slides and links are <a href="/jfdi/slides-from-ops-a-devs-guide.html">posted
+here</a> and <a href="https://www.youtube.com/watch?v=y6hbrS3DheU">video is on
+YouTube</a>.</p>
+<h1><a
+href="https://www.youtube.com/watch?v=OLOaq-Xf5zU">A PaaS for
+government</a></h1>
+<date>29 October 2015</date>
+<p>I gave a keynote at VelocityEU about the work I've been leading at GDS on building a PaaS
+for government.</p>
+<a href="https://www.youtube.com/watch?v=OLOaq-Xf5zU">Video is on
+YouTube</a>, <a
+href="http://www.slideshare.net/annashipman/a-paas-for-government">slides are here</a> and the <a
+href="http://conferences.oreilly.com/velocity/devops-web-performance-eu-2015/public/schedule/detail/46814">abstract is on the Velocity site</a>.</p>
+<h1><a
 href="https://www.ucisa.ac.uk/groups/ig/Events/2015/IG15/new_programme.aspx">Digital
 infrastructure for the government</a></h1>
 <date>30 September 2015</date>
