--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <tr>
                         <td><a href="jfdi.html" class="header-text">JFDI</a></td>
                         <td><a href="cv.html" class="header-text">CV</a></td>
-                        <td><a href="games.html" class="header-text">Games</a></td>
+                        <td><a href="etc.html" class="header-text">Etc</a></td>
                     </tr>
                 </table>
             </div>
