--- a/games.html
+++ b/games.html
@@ -1,28 +1,5 @@
-<!DOCTYPE HTML>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<html lang="en-GB">
-    <head>
-        <title>Anna Shipman : Games</title>
-        <link rel="shortcut icon" href="favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <!-- Anything good about the styling of this website is down to the amazing Chris Govias; you should hire him: http://work.chrisgovias.com/ Anything bad or stupid is down to me. Do let me know if you spot anything. -->
-    </head>
-    <body>
-        <div class="header">
-            <span class="name"><a href="/">Anna Shipman</a> : Games</span>
-            <div class="navigation">
-                <a href="http://www.twitter.com/annashipman" class="header-text twitter">Follow me on Twitter</a>
-                <table class="link-group">
-                    <tr>
-                        <td><a href="jfdi.html" class="header-text">JFDI</a></td>
-                        <td><a href="cv.html" class="header-text">CV</a></td>
-                        <td><a href="etc.html" class="header-text">Etc</a></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-<p>Content now at <a href="/etc.html">Etc</a>.</p>
-
-
-</body>
-</html>
+---
+layout: redirect
+permalink: /games.html
+redirect_to:  /etc.html
+---
