--- a/cv.html
+++ b/cv.html
@@ -21,12 +21,7 @@
                 </table>
             </div>
         </div>
-<div class="colmask threecol">
-    <div class="colmid">
-        <div class="colleft">
-            <div class="col1">
-                <!-- Column 1 start -->
-
+            <div class="right-2-column">
 <div>
 <h2>Speaking</h2>
 <h1><a
@@ -100,10 +95,8 @@ three different JavaScript visualisation libraries. I delivered this at <a href=
 in 2009 at XPDay, one of the main pro-Agile conferences, and it was very popular!</p>
 
 </div>
-                <!-- Column 1 end -->
             </div>
-            <div class="col2">
-                <!-- Column 2 start -->
+            <div class="left-2-column">
 <h2>CV</h2>
 
 <p>My <a href="AnnaShipmanCV.pdf">CV</a> (as a PDF).</p>
@@ -125,14 +118,6 @@ href="https://gdstechnology.blog.gov.uk/author/annashipman/">GDS technology
 blog</a>, the <a href="https://gds.blog.gov.uk/author/annashipman/">GDS blog</a>
 and the <a href="https://governmentasaplatform.blog.gov.uk/author/annashipman/">Government as a Platform</a> blog. All those posts can also
 be read on <a href="/jfdi.html">my own blog</a>.
-</div>
-                <!-- Column 2 end -->
-            <div class="col3">
-                <!-- Column 3 start -->
-                <!-- Column 3 end -->
-            </div>
-        </div>
-    </div>
 </div>
 
 </body>
