Slight redesign of Etc page
More to do here but this is a start.

--- a/etc.html
+++ b/etc.html
@@ -2,13 +2,13 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <html lang="en-GB">
     <head>
-        <title>Anna Shipman : Games</title>
+        <title>Anna Shipman : Etc</title>
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <div class="header">
-            <span class="name"><a href="/">Anna Shipman</a> : Games</span>
+            <span class="name"><a href="/">Anna Shipman</a> : Etc</span>
             <div class="navigation">
                 <a href="http://www.twitter.com/annashipman" class="header-text twitter">Follow me on Twitter</a>
                 <table class="link-group">
@@ -20,10 +20,18 @@
                 </table>
             </div>
         </div>
-<p>I like to write games in my spare time. Here are some of them.</p>
-
 
 <div class="left-2-column">
+
+<h1>Other stuff</h1>
+<p>A website from my former incarnation, as a book reviewer:
+<a href="annasbookcorner/index.html" target="_blank">Anna's Book Corner</a>.
+</div>
+
+<div class="right-2-column">
+<h1>Games</h1>
+<p>I like to write games in my spare time. Here are some of them.</p>
+
 
 <h3>Snake</h3>
 <p>My version of the Nokia phone game. Purely for experimental purposes. This is
@@ -35,9 +43,6 @@ welcome.</p>
 <p><a href="games/bacteriaggj.html">Play it!</a> (requires Flash)</p>
 <p>ActionScript; <a href="https://github.com/annashipman/bacteria-warfare">repo on GitHub</a></p>
 <p>This game was created as part of the <a href="http://archive.globalgamejam.org/2010/bacterial-warfare" target="_blank">Global Game Jam 2010</a>.</p>
-</div>
-
-<div class="right-2-column">
 <h3>Tetris</h3>
 <p>This is WIP. I am exploring developing a game using TDD. It's completely unplayable at the moment but the tests all pass!</p>
 <p>Java; WIP on <a href="https://github.com/annashipman/Tetris">GitHub</a>.</p>
