Use header and footer for Etc page
No re-formatting of page, as more changes are afoot.

--- a/etc.html
+++ b/etc.html
@@ -1,26 +1,6 @@
-<!DOCTYPE HTML>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<html lang="en-GB">
-    <head>
-        <title>Anna Shipman : Etc</title>
-        <link rel="shortcut icon" href="favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
-    <body>
-        <div class="header">
-            <span class="name"><a href="/">Anna Shipman</a> : Etc</span>
-            <div class="navigation">
-                <a href="http://www.twitter.com/annashipman" class="header-text twitter">Follow me on Twitter</a>
-                <table class="link-group">
-                    <tr>
-                        <td><a href="jfdi.html" class="header-text">JFDI</a></td>
-                        <td><a href="cv.html" class="header-text">CV</a></td>
-                        <td><a href="etc.html" class="header-text">Etc</a></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
+---
+---
+{% include header.html page_name="Etc" %}
 <div class="left-2-column">
 
 <h1>Other stuff</h1>
@@ -56,5 +36,4 @@ flocking behaviour.<p>
 <p>Python, PyOpenGL, PyGame; source <a href="http://globalgamejam.org/2011/flocks-sake">here</a>.</p>
 </div>
 
-</body>
-</html>
+{% include footer.html %}
