Use header and footer for CV page

--- a/cv.html
+++ b/cv.html
@@ -1,26 +1,7 @@
-<!DOCTYPE HTML>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<html lang="en-GB">
-    <head>
-        <title>Anna Shipman</title>
-        <link rel="shortcut icon" href="favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
-    <body>
-        <div class="header">
-            <span class="name"><a href="/">Anna Shipman</a> : CV</span>
-            <div class="navigation">
-                <a href="http://www.twitter.com/annashipman" class="header-text twitter">Follow me on Twitter</a>
-                <table class="link-group">
-                    <tr>
-                        <td><a href="jfdi.html" class="header-text">JFDI</a></td>
-                        <td><a href="cv.html" class="header-text">CV</a></td>
-                        <td><a href="etc.html" class="header-text">Etc</a></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-            <div class="right-2-column">
+---
+---
+{% include header.html page_name="CV" %}
+<div class="right-2-column">
 <div>
 <h2>Speaking</h2>
 <h1><a
@@ -117,5 +98,4 @@ and the <a href="https://governmentasaplatform.blog.gov.uk/author/annashipman/">
 be read on <a href="/jfdi.html">my own blog</a>.
 </div>
 
-</body>
-</html>
+{% include footer.html %}
