Add colon to individual page names
This is to allow the home page to just be plain `Anna Shipman`.

--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,6 @@
 ---
 ---
-{% include header.html page_name="CV" %}
+{% include header.html page_name=" : CV" %}
 <div class="right-2-column">
 <div>
 <h2>Speaking</h2>
