--- a/etc.html
+++ b/etc.html
@@ -1,6 +1,6 @@
 ---
 ---
-{% include header.html page_name="Etc" %}
+{% include header.html page_name=" : Etc" %}
 <div class="left-2-column">
 
 <h1>Other stuff</h1>
