Replace hand-crafted html with header and footer
The index page doesn't need a page name. The only difference between this and what was there before is that the page heading is not a link to this page.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,6 @@
-<!DOCTYPE HTML>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<html lang="en-GB">
-    <head>
-        <title>Anna Shipman</title>
-        <link rel="shortcut icon" href="favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
-    <body>
-        <div class="header">
-            <span class="name">Anna Shipman</span>
-            <div class="navigation">
-                <a href="http://www.twitter.com/annashipman" class="header-text twitter">Follow me on Twitter</a>
-                <table class="link-group">
-                    <tr>
-                        <td><a href="jfdi.html" class="header-text">JFDI</a></td>
-                        <td><a href="cv.html" class="header-text">CV</a></td>
-                        <td><a href="etc.html" class="header-text">Etc</a></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+---
+---
+{% include header.html %}
             <div class="right-2-column">
 <div><h1>Recent stuff</h1></div>
 <div class="blog-post">
@@ -113,5 +94,4 @@ How we moved vCloud Tools from Coding in the Open to Open Source</a></h1>
 </div>
             </div>
 
-</body>
-</html>
+{% include footer.html %}
