--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <div class="right-2-column">
   <div><h1>Recent stuff</h1></div>
-  {% for post in site.posts %}
+  {% for post in site.posts limit:10 %}
     <div id="{{ post.anchor_id }}" class="blog-post">
       <h1><a href="{{post.url}}">{{ post.title}}</a></h1>
       <date>{{ post.date | date_to_long_string }}</date>
