--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="left-2-column">
   <div class="sidebar">
     <p>I am a technical architect and software developer living and working in London, currently at the <a href="https://gds.blog.gov.uk/about/">Government Digital Service</a>.</p>
-    <p>I <a href="http://twitter.com/annashipman" target="_blank">tweet</a>, <a href="https://github.com/annashipman" target="_blank">code</a>, occasionally <a href="jfdi.html">blog</a> and play pool.
+    <p>I <a href="http://twitter.com/annashipman">tweet</a>, <a href="https://github.com/annashipman">code</a>, occasionally <a href="jfdi.html">blog</a> and play pool.
   </div>
 </div>
 
