Remove 2 from style name
`left-2-column` and `right-2-column` referred to the name of the style when there was also a 3 column layout. There isn't now, so the 2 is redundant and possibly confusing.

It's still useful to have the position of the column in the name, especially now they may appear in the source in a different order.

--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 ---
 {% include header.html page_name=" : CV" %}
 
-<div class="left-2-column">
+<div class="left-column">
 <h2>CV</h2>
 
 <p>My <a href="AnnaShipmanCV.pdf">CV</a> (as a PDF).</p>
@@ -24,7 +24,7 @@ and the <a href="https://governmentasaplatform.blog.gov.uk/author/annashipman/">
 be read on <a href="/jfdi.html">my own blog</a>.
 </div>
 
-<div class="right-2-column">
+<div class="right-column">
 <div>
 <h2>Speaking</h2>
 <h1><a
