--- a/etc.html
+++ b/etc.html
@@ -1,7 +1,7 @@
 ---
 ---
 {% include header.html page_name=" : Etc" %}
-<div class="right-2-column">
+<div class="right-column">
 <h1>Games</h1>
 <p>I like to write games in my spare time. Here are some of them.</p>
 
@@ -29,7 +29,7 @@ flocking behaviour.<p>
 <p>Python, PyOpenGL, PyGame; source <a href="http://globalgamejam.org/2011/flocks-sake">here</a>.</p>
 </div>
 
-<div class="left-2-column">
+<div class="left-column">
 
 <h1>Other stuff</h1>
 <p>A website from my former incarnation, as a book reviewer:
