--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 ---
 {% include header.html %}
 
-<div class="left-2-column">
+<div class="left-column">
   <div class="sidebar">
     <p>I am a technical architect and software developer living and working in London, currently at the <a href="https://gds.blog.gov.uk/about/">Government Digital Service</a>.</p>
     <p>I <a href="http://twitter.com/annashipman">tweet</a>, <a href="https://github.com/annashipman">code</a>, occasionally <a href="jfdi.html">blog</a> and play pool.
   </div>
 </div>
 
-<div class="right-2-column">
+<div class="right-column">
   <div><h1>Recent stuff</h1></div>
   {% for post in site.posts limit:10 %}
     <div id="{{ post.anchor_id }}" class="blog-post">
