--- a/jfdi.html
+++ b/jfdi.html
@@ -1,7 +1,12 @@
 ---
-layout: blog_layout
 ---
 
+{% include header.html page_name=" : JFDI" %}
+<div class="left-column">
+    {% include sidebar.html %}
+</div>
+
+<div class="right-column">
 {% for post in site.posts %}
 <div id="{{ post.anchor_id }}" class="blog-post">
 <h1><a href="{{post.url}}">{{ post.title}}</a></h1>
@@ -11,3 +16,5 @@ layout: blog_layout
 
 {% endfor %}
 
+</div>
+{% include footer.html %}
