--- a/cv.html
+++ b/cv.html
@@ -28,6 +28,14 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div>
 <h2>Speaking</h2>
 <h1><a
+href="https://gotocon.com/berlin-2016/presentations/show_talk.jsp?oid=7984">Open sourcing government
+guide</a></h1>
+<date>14 November 2016</date>
+<p>An introduction to coding in the open and its benefits and challenges, and what my plans are for government Open Source as Open Source Lead.
+Delivered at <a
+href="https://gotocon.com/berlin-2016">GOTO Berlin</a>.</p>
+<p>Slides are <a href="http://www.slideshare.net/annashipman/open-sourcing-government-68907474">posted here</a>.</p>
+<h1><a
 href="https://www.youtube.com/watch?v=y6hbrS3DheU">Operations: a developer's
 guide</a></h1>
 <date>06 November 2015</date>
