--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
 
 <p>My <a href="/jfdi.html">blog</a>.</p>
 <p>I have written a chapter about DevOps at GDS for the book <a href="http://blog.buildqualityin.com/"> Build Quality In</a>.</p>
-<p>I wrote the section on <a href="https://www.gov.uk/service-manual/agile/running-retrospectives.html" target="_blank">retrospectives</a> in the <a href="https://www.gov.uk/service-manual" target="_blank">Government Service Design Manual</a>.</p>
+<p>I wrote the sections on <a href="https://www.gov.uk/service-manual/technology/making-source-code-open-and-reusable">making source code open and reusable</a> and <a href="https://github.com/gds-attic/government-service-design-manual/blob/master/service-manual/agile/running-retrospectives.md">running retrospectives</a> in the <a href="https://www.gov.uk/service-manual">Government Service Design Manual</a>.</p>
 <p>I have written several posts on the <a
 href="https://gdstechnology.blog.gov.uk/author/annashipman/">GDS technology
 blog</a>, the <a href="https://gds.blog.gov.uk/author/annashipman/">GDS blog</a>
