Add video of GOTO Berlin talk
Which has just been published.

--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@ href="https://gotocon.com/berlin-2016/presentations/show_talk.jsp?oid=7984">Open
 <p>An introduction to coding in the open and its benefits and challenges, and what my plans are for government Open Source as Open Source Lead.
 Delivered at <a
 href="https://gotocon.com/berlin-2016/presentations/show_talk.jsp?oid=7984">GOTO Berlin</a>.</p>
-<p>Slides are <a href="http://www.slideshare.net/annashipman/open-sourcing-government-68907474">posted here</a>.</p>
+<p><a href="https://www.youtube.com/watch?v=h8vlLRZxedg&feature=youtu.be">Video is on YouTube</a> and slides are <a href="http://www.slideshare.net/annashipman/open-sourcing-government-68907474">on SlideShare</a>.</p>
 <h1><a
 href="https://www.youtube.com/watch?v=y6hbrS3DheU">Operations: a developer's
 guide</a></h1>
