Add speaker bio

--- a/cv.html
+++ b/cv.html
@@ -12,6 +12,8 @@
 <p>Me on <a href="https://twitter.com/annashipman">Twitter</a>.
 
 <p>Me on <a href="http://www.linkedin.com/in/annashipman" target="_blank">LinkedIn</a>.</p>
+
+<p>My <a href="/bio.html">speaker bio</a>.</p>
 <h2>Writing</h2>
 
 <p>My <a href="/jfdi.html">blog</a>.</p>
