--- a/cv.html
+++ b/cv.html
@@ -30,6 +30,12 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div>
 <h2>Speaking</h2>
 <h1><a
+href="https://www.turingfest.com/sessions/coding-open-government/">Coding in the open in government</a></h1>
+<date>3rd August 2017</date>
+<p>What coding in the open means and its benefits to government and industry.
+Delivered at <a
+href="https://www.turingfest.com/sessions/coding-open-government/">Turing Fest</a>. Slides on <a href="https://www.slideshare.net/annashipman/coding-in-the-open-in-government-78530680">SlideShare</a>, video to follow.</p>
+<h1><a
 href="https://gotocon.com/berlin-2016/presentations/show_talk.jsp?oid=7984">Open sourcing government</a></h1>
 <date>14 November 2016</date>
 <p>An introduction to coding in the open and its benefits and challenges, and what my plans are for government Open Source as Open Source Lead.
