--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
 <p>I wrote the sections on <a href="https://www.gov.uk/service-manual/technology/making-source-code-open-and-reusable">making source code open and reusable</a> and <a href="https://github.com/gds-attic/government-service-design-manual/blob/master/service-manual/agile/running-retrospectives.md">running retrospectives</a> in the <a href="https://www.gov.uk/service-manual">Government Service Design Manual</a>.</p>
 <p>I have written several posts on the <a
 href="https://gdstechnology.blog.gov.uk/author/annashipman/">GDS technology
-blog</a>, the <a href="https://gds.blog.gov.uk/author/annashipman/">GDS blog</a>
+blog</a>, the <a href="https://gds.blog.gov.uk/author/anna-shipman/">GDS blog</a>
 and the <a href="https://governmentasaplatform.blog.gov.uk/author/annashipman/">Government as a Platform</a> blog. All those posts can also
 be read on <a href="/jfdi.html">my own blog</a>.
 </div>
