--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,9 @@ href="https://www.turingfest.com/sessions/coding-open-government/">Coding in the
 <date>3rd August 2017</date>
 <p>What coding in the open means and its benefits to government and industry.
 Delivered at <a
-href="https://www.turingfest.com/sessions/coding-open-government/">Turing Fest</a>. Slides on <a href="https://www.slideshare.net/annashipman/coding-in-the-open-in-government-78530680">SlideShare</a>, video to follow.</p>
+href="https://www.turingfest.com/sessions/coding-open-government/">Turing Fest</a>.</p>
+
+<p>Video is <a href="https://www.turingfest.com/speakers/anna-shipman/?wvideo=0p810lpdqr">on their site</a> (you can skip the email request), and slides are on <a href="https://www.slideshare.net/annashipman/coding-in-the-open-in-government-78530680">SlideShare</a>.</p>
 <h1><a
 href="https://gotocon.com/berlin-2016/presentations/show_talk.jsp?oid=7984">Open sourcing government</a></h1>
 <date>14 November 2016</date>
