Add Pipeline talk to CV page

--- a/cv.html
+++ b/cv.html
@@ -30,6 +30,12 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div>
 <h2>Speaking</h2>
 <h1><a
+href="https://www.youtube.com/watch?v=M94Hg1mMGAg">How coding in the open can help you release faster</a></h1>
+<date>20th March 2018</date>
+<p>How coding in the open can help speed up all stages of the release cycle. Delivered at <a href="https://pipelineconf.info/">Pipeline conference</a>.</p>
+<p>Video, slides and a great sketchnote are in <a href="/jfdi/open-code-helps-you-release-faster.html">my write-up</a>.</p>
+
+<h1><a
 href="https://www.turingfest.com/sessions/coding-open-government/">Coding in the open in government</a></h1>
 <date>3rd August 2017</date>
 <p>What coding in the open means and its benefits to government and industry.
