Correct case so that image displays

--- a/annasbookcorner/thriller.htm
+++ b/annasbookcorner/thriller.htm
@@ -168,7 +168,7 @@ onClick="rand_link()" value="Pot Luck">
               </font><font size="1"><i><font color="#FF0000" size="2">*</font><font size="2">****</font></i></font><font face="Verdana, Arial, Helvetica, sans-serif" size="1"> 
               </font></div></td>
           <td valign="top" width="1" bgcolor="#F0EDB9" >&nbsp;</td>
-          <td valign="top" width="150"><div align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><a href="#Millionaires"><img src="/images/Millionaires.jpg" alt="Read review" width="84" height="128" border="0"><br>
+          <td valign="top" width="150"><div align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><a href="#Millionaires"><img src="/images/millionaires.jpg" alt="Read review" width="84" height="128" border="0"><br>
               <b>The Millionaires</b></a><br>
               by Brad Meltzer<br>
               </font><font size="1"><i><font color="#FF0000" size="2">***</font><font size="2">**</font></i></font><font face="Verdana, Arial, Helvetica, sans-serif" size="1"> 
