Correct poetry link
There isn't a poetry page, only a non-fiction and poetry page.

--- a/annasbookcorner/allreviews.htm
+++ b/annasbookcorner/allreviews.htm
@@ -291,7 +291,7 @@ onClick="rand_link()" value="Pot Luck">
                 </tr>
                 <tr> 
                   <td><font face="Times New Roman, Times, serif" size="2"><font color="#FF0000">**</font>***</font></td>
-                  <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><a href="poetry.htm#PublicProperty">Public 
+                  <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><a href="nonfiction.htm#PublicProperty">Public 
                     Property</a> by Andrew Motion </font></td>
                 </tr>
                 <tr>
@@ -463,7 +463,7 @@ onClick="rand_link()" value="Pot Luck">
                 </tr>
                 <tr> 
                   <td><font face="Times New Roman, Times, serif" size="2"><font color="#FF0000">**</font>***</font></td>
-                  <td><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><font size="2"><font size="1"><font size="2"><a href="poetry.htm#PublicProperty">Public 
+                  <td><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><font size="2"><font size="1"><font size="2"><a href="nonfiction.htm#PublicProperty">Public 
                     Property</a> by Andrew Motion </font></font></font></font></td>
                 </tr>
                 <tr> 
