Clarify that I was actually paid to review books...
Unfortunately my reviews for The List pre-date them putting them online, so we only have my word for it (and the cuttings I've just found in a folder) but given the rubbishness of the old website I feel like it's worth clarifying that this was actually something I did for a job...

--- a/etc.html
+++ b/etc.html
@@ -32,7 +32,7 @@ flocking behaviour.<p>
 <div class="left-column">
 
 <h1>Other stuff</h1>
-<p>A website from my former incarnation, as a book reviewer:
+<p>A website from my former incarnation, as one of <a href="https://www.list.co.uk/">The List</a>'s book reviewers:
 <a href="annasbookcorner/index.html" target="_blank">Anna's Book Corner</a>.
 </div>
 
